# src/routes.ts
@@ -18,7 +18,8 @@ const models: TsoaRoute.Models = {
             "createdAt": {"dataType":"datetime","required":true},
             "updatedAt": {"dataType":"datetime","required":true},
             "id": {"dataType":"double","required":true},
-            "sportName": {"dataType":"string","required":true},
+            "league": {"dataType":"string","required":true},
+            "filter": {"dataType":"string","required":true},
             "matchId": {"dataType":"string","required":true},
             "matchDate": {"dataType":"string","required":true},
             "betDate": {"dataType":"string","required":true},
