# src/swagger.json
@@ -20,7 +20,10 @@
 						"type": "number",
 						"format": "double"
 					},
-					"sportName": {
+					"league": {
+						"type": "string"
+					},
+					"filter": {
 						"type": "string"
 					},
 					"matchId": {
@@ -40,7 +43,8 @@
 					"createdAt",
 					"updatedAt",
 					"id",
-					"sportName",
+					"league",
+					"filter",
 					"matchId",
 					"matchDate",
 					"betDate",
